# glide

./: .gitignore  Cargo.toml  README.md  USAGE_GUIDE.md  glide-kvm.service
.github/workflows/: release.yml
src/: clipboard.rs  gui.rs  main.rs  net.rs  protocol.rs
