[package]
name = "glide-kvm"
version = "0.1.0"
edition = "2021"
authors = ["thrylox"]
description = "Ultra-low latency Rust Software KVM with clipboard sync, file drag-and-drop, and egui dashboard"

[dependencies]
# Async runtime & networking
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Clipboard & OS integration
arboard = "3.4"

# GUI Dashboard
egui = "0.27"
eframe = "0.27"

# Utilities & Logging
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11rb = "0.13"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rdev = "0.5"
